Mon Jul  3 14:28:06 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed ProgClient's destructor (was throwing an exception duplicating
	  work being done elsewhere, causing an abort under some circumstances.)

Mon Jul  3 14:11:23 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed stemtest so that it now works with the swedish data set.

Mon Jul  3 13:51:53 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix fake memory leak being reported in some conditions, due to
	  failure to initialise the debug object fully before starting the
	  testsuite.

	* Run phrase and near tests on each backend, but fail.  Inmemory to
	  be fixed in a moment: network failure doesn't matter yet, but
	  should be fixed soon.

Mon Jul  3 12:38:11 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Change some FIXME's to \todo's - the new doxygen tag.  This should
	  be used in most situations where we used to use FIXME, now.

Mon Jul  3 12:29:10 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added get_description() methods to all API objects, returning
	  a human readable description of the contents of the object.

	* Added output operators for API objects, so that you can do
	  "cout << omenquire;"

	* Improved debug messages when displaying API calls, so that full
	  information is given about the parameters and return types.

Sun Jul  2 17:17:14 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Updated doxygen configuration files for doxygen 1.1.5.

	* Configure now checks for dot tool, and sets doxygen config files
	  accordingly.

Fri Jun 30 16:04:19 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added an om_stringstream class as a simple implementation of 
	  something like std::stringstream.

	* Debug messages now have a finer-grain lock to avoid entangling
	  of messages or deadlocks.

Fri Jun 30 12:48:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
