@@ -8,8 +8,7 @@ noinst_HEADERS = sleepy_list.h \
 		 sleepy_termcache.h \
                  sleepy_database.h \
                  sleepy_database_internals.h \
-		 sleepy_document.h \
-		 sleepy_positionlist.h
+		 sleepy_document.h
 
 noinst_LTLIBRARIES = libsleepy.la
 
@@ -19,8 +18,7 @@ libsleepy_la_SOURCES = sleepy_list.cc \
                        sleepy_termcache.cc \
                        sleepy_database.cc \
                        sleepy_database_internals.cc \
-		       sleepy_document.cc \
-		       sleepy_positionlist.cc
+		       sleepy_document.cc
 
 libsleepy_la_LIBADD = @SLEEPYCAT_LIBS@
 
