@@ -15,7 +15,8 @@ noinst_HEADERS = \
  omdatabaseinterface.h \
  netutils.h netserver.h progserver.h socketclient.h socketserver.h \
  socketcommon.h positionlist.h testsuite.h testutils.h tcpclient.h \
- tcpserver.h omerr_string.h omdebug.h omlinebuf.h omstringstream.h
+ tcpserver.h omerr_string.h omdebug.h omlinebuf.h omstringstream.h \
+ inmemory_positionlist.h 
 
 noinst_LTLIBRARIES = libcommon.la
 
